Added basic page information to html.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!--
       Home page for my portfolio.
       Author: Aiden Eyre
@@ -9,12 +8,49 @@
 
       Filename:   index.html
    -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Eyre</title>
-</head>
+  </head>
 
-<body>
-    
-</body>
+  <body>
+    <main>
+      <div class="headerBlock">
+        <div id="resumeButton">
+          <h1>My Resume</h1>
+        </div>
+        <div id="headerStyleBlock">
+          <h1>Aiden Eyre</h1>
+        </div>
+        <div id="picutreBox">
+          <img src="images/PictureOfMe.jpg" alt="Photo of Aiden Eyre" />
+        </div>
+      </div>
+
+
+      <div class="bodyBlock">
+        <nav>
+          <ul>
+            <li>Projects</li>
+            <li>Classes Taken</li>
+            <li>About Me</li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="contactBlock">
+        <section id="contactLinks">
+          <a href="">Git</a>
+          <a href="">Linkdin</a>
+          <a href="">email</a>
+        </section>
+        <div id="ContactMeArea">
+          <button>Contact Me</button>
+          <form action="">
+
+          </form>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
