Added Grid layout code to styles.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Eyre</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -23,7 +24,7 @@
           <h1>Aiden Eyre</h1>
         </div>
         <div id="picutreBox">
-          <img src="images/PictureOfMe.jpg" alt="Photo of Aiden Eyre" />
+          <img src="images/PictureOfMe2.jpg" alt="Photo of Aiden Eyre" />
         </div>
       </div>
 
