Created grid for content under header.

--- a/index.html
+++ b/index.html
@@ -11,47 +11,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Eyre</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <main>
-      <div class="headerBlock">
-        <div id="resumeButton">
-          <h1>My Resume</h1>
-        </div>
-        <div id="headerStyleBlock">
-          <h1>Aiden Eyre</h1>
-        </div>
-        <div id="picutreBox">
-          <img src="images/PictureOfMe2.jpg" alt="Photo of Aiden Eyre" />
-        </div>
+    <header>
+      <div>
+        <img src="images/PictureOfMe3.jpg" alt="Photo of Aiden Eyre" />
+        <h1>Aiden eyre</h1>
+        <h2>Studying Computer Science at Weber State University</h2>
       </div>
+    </header>
 
-
-      <div class="bodyBlock">
+    <main>
+      <div class="navBlock">
         <nav>
-          <ul>
-            <li>Projects</li>
-            <li>Classes Taken</li>
-            <li>About Me</li>
-          </ul>
+          <button>Resume</button>
+          <button>Classes Taken</button>
+          <button>Projects</button>
+          <button>About Me</button>
         </nav>
       </div>
 
-      <div class="contactBlock">
-        <section id="contactLinks">
-          <a href="">Git</a>
-          <a href="">Linkdin</a>
-          <a href="">email</a>
-        </section>
-        <div id="ContactMeArea">
-          <button>Contact Me</button>
-          <form action="">
+      <div class="bodyBlock"></div>
 
-          </form>
-        </div>
-      </div>
+      <div class="contactBlock"></div>
     </main>
   </body>
 </html>
