Added code so that nav buttons don't link new site.
Using eventListener and other HTML DOM functions The page doesn't need to load more than once!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Eyre</title>
+    <script type="text/javascript" src="code.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -26,15 +27,46 @@
     <main>
       <div class="navBlock">
         <nav>
-          <button>About Me</button>
-          <button>Projects</button>
-          <button>Resume</button>
+          <button id="aboutMeButton">About Me</button>
+          <button id="projectsButton">Projects</button>
+          <button id="resumeButton">Resume</button>
+          <button id="contactMeButton">Contact Me</button>
         </nav>
       </div>
 
-      <div class="bodyBlock"></div>
-
-      <div class="contactBlock"></div>
+      <div class="bodyBlock">
+        <div id="aboutMeSection">
+          <p>
+            If you can imagine a furry humanoid seven feet tall, with the face
+            of an intelligent gorilla and the braincase of a man, you'll have a
+            rough idea of what they looked like -- except for their teeth. The
+            canines would have fitted better in the face of a tiger, and showed
+            at the corners of their wide, thin-lipped mouths, giving them an
+            expression of ferocity.
+          </p>
+        </div>
+        <div id="projectSection">
+          <p>
+             better in the face of a tiger, and showed
+            at the corners of their wide, thin-lipped mouths, giving them an
+            expression of ferocity.
+          </p>
+        </div>
+        <div id="resumeSection">
+          <p>
+            If you can imagine a furry humanoid seven feet tall, with the face
+            of an intelligent gorilla and the braincase of a man, you'll have a
+            rough idea of what they
+          </p>
+        </div>
+        <div id="contactMeSection">
+          <p>
+            If you can imagine a furryitted better in the face of a tiger, and showed
+            at the corners of their wide, thin-lipped mouths, giving them an
+            expression of ferocity.
+          </p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
