Adjusted a few styles and changed the content of .aboutMeSection

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main>
       <div class="navBlock">
         <nav>
+          <button id="resumeButton">Resume</button>
           <button id="aboutMeButton">About Me</button>
           <button id="projectsButton">Projects</button>
-          <button id="resumeButton">Resume</button>
           <button id="contactMeButton">Contact Me</button>
         </nav>
       </div>
@@ -37,12 +37,10 @@
       <div class="bodyBlock">
         <div id="aboutMeSection">
           <p>
-            If you can imagine a furry humanoid seven feet tall, with the face
-            of an intelligent gorilla and the braincase of a man, you'll have a
-            rough idea of what they looked like -- except for their teeth. The
-            canines would have fitted better in the face of a tiger, and showed
-            at the corners of their wide, thin-lipped mouths, giving them an
-            expression of ferocity.
+            I'm a student at Weber State University working hard to achieve a bachelors degree in
+            Computer Science. Most of my experience thus far is in front end work such as HTML, CSS and Javascript.
+            I also have spent time working with C#, C++, Java, and SQL. I absolutely love learning new things
+            and enjoy every class I get the opportunity to take!
           </p>
         </div>
         <div id="projectSection">
@@ -60,11 +58,9 @@
           </p>
         </div>
         <div id="contactMeSection">
-          <p>
-            If you can imagine a furryitted better in the face of a tiger, and showed
-            at the corners of their wide, thin-lipped mouths, giving them an
-            expression of ferocity.
-          </p>
+          <form action=""> 
+            
+          </form>
         </div>
       </div>
     </main>
