Adjusted more random css styles, nothing important.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
   <body>
     <header>
       <div>
-        <img src="images/PictureOfMe3.jpg" alt="Photo of Aiden Eyre" />
-        <h1>Aiden eyre</h1>
-        <h2>Studying Computer Science at Weber State University</h2>
+        <div class="headButtons"></div>
+        <img class="headImage" src="images/PictureOfMe3.jpg" alt="Photo of Aiden Eyre" />
+        <h1 class="headName">Aiden eyre</h1>
       </div>
     </header>
 
     <main>
       <div class="navBlock">
         <nav>
-          <button id="resumeButton">Resume</button>
-          <button id="aboutMeButton">About Me</button>
-          <button id="projectsButton">Projects</button>
-          <button id="contactMeButton">Contact Me</button>
+          <h2 id="resumeButton">Resume</h2>
+          <h2 id="aboutMeButton">About Me</h2>
+          <h2 id="projectsButton">Projects</h2>
+          <h2 id="contactMeButton">Contact Me</h2>
         </nav>
       </div>
 
