--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <header>
       <div>
         <div class="headButtons"></div>
-        <img class="headImage" src="images/PictureOfMe3.jpg" alt="Photo of Aiden Eyre" />
+        <img
+          class="headImage"
+          src="images/PictureOfMe3.jpg"
+          alt="Photo of Aiden Eyre"
+        />
         <h1 class="headName">Aiden eyre</h1>
       </div>
     </header>
@@ -37,29 +41,39 @@
       <div class="bodyBlock">
         <div id="aboutMeSection">
           <p>
-            I'm a student at Weber State University working hard to achieve a bachelors degree in
-            Computer Science. Most of my experience thus far is in front end work such as HTML, CSS and Javascript.
-            I also have spent time working with C#, C++, Java, and SQL. I absolutely love learning new things
-            and enjoy every class I get the opportunity to take!
+            I'm a student at Weber State University working hard to achieve a
+            bachelors degree in Computer Science. Most of my experience thus far
+            is in front end work such as HTML, CSS and Javascript. I also have
+            spent time working with C#, C++, Java, and SQL. I absolutely love
+            learning new things and enjoy every class I get the opportunity to
+            take!
           </p>
         </div>
         <div id="projectSection">
           <p>
-             better in the face of a tiger, and showed
-            at the corners of their wide, thin-lipped mouths, giving them an
-            expression of ferocity.
+            better in the face of a tiger, and showed at the corners of their
+            wide, thin-lipped mouths, giving them an expression of ferocity.
           </p>
         </div>
         <div id="resumeSection">
-          <p>
-            If you can imagine a furry humanoid seven feet tall, with the face
-            of an intelligent gorilla and the braincase of a man, you'll have a
-            rough idea of what they
-          </p>
+          <a href=""><h2>Open Resume in PDF</h2></a>
         </div>
         <div id="contactMeSection">
-          <form action=""> 
-            
+          <form action="">
+            <fieldset>
+              <legend>Contact Form</legend>
+              <label for="name">Your Name</label>
+              <input name="name" id="name" type="text" />
+              <label for="email">Your Email</label>
+              <input name="email" id="email" type="email" />
+              <label for="subject">Subject</label>
+              <input name="subject" id="subject" type="text" />
+              <textarea
+                name="message"
+                id="message"
+                placeholder="What would you like to say?"
+              ></textarea>
+            </fieldset>
           </form>
         </div>
       </div>
