Used JavaScript to add snake animation.
Animation shows when you hover "Snake Game" in the projects tab.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,23 @@
         </div>
         <div id="projectSection">
           <div>
-            <h1><a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/">Snake Game</a></h1>
-            
+            <h1 id="pSnakeGameLink"><a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/">Snake Game</a></h1>
+            <div id="s1"></div>
+            <div id="s2"></div>
+            <div id="s3"></div>
+            <div id="s4"></div>
+            <div id="s5"></div>
+            <div id="s6"></div>
+            <div id="s7"></div>
+            <div id="s8"></div>
+            <div id="s9"></div>
+            <div id="s10"></div>
+            <div id="s11"></div>
+            <div id="s12"></div>
+            <div id="s13"></div>
+            <div id="s14"></div>
+            <div id="s15"></div>
+            <div id="s16"></div>
             <p>Basic snake game written in HTML, CSS, and JavaScript. Programmed to run on both mobile
                and desktop. JavaScript DOM elements are used to paint the game onto an html canvas. 
                Event handlers are used for the button and key presses.
