Updated contact links in resume.

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             <tbody>
               <tr id="rtContact">
                 <td class="rtContact" colspan="2">
-                  <a href="">EyreAiden@gmail.com</a>
+                  <a href="mailto:EyreAiden@gmail.com">EyreAiden@gmail.com</a>
                    | 
-                  <a href="">(385)252-9312</a>
+                  <a href="tel:+1-385-252-9312">(385)252-9312</a>
                    | 
-                  <a href="">GitHub</a>
+                  <a href="https://github.com/AidenEyre" target="blank">GitHub</a>
                 </td>
               </tr>
 
@@ -234,7 +234,7 @@
           </table>
         </div>
         <div id="contactMeSection">
-          <form action="">
+          <form method="POST" data-netlify="true">
             <input
               class="formInput"
               name="name"
