Updated code so index.html can be put into public_html on the server.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Eyre</title>
-    <script type="text/javascript" src="code.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <script type="text/javascript" src="AidenEyrePortfolio/code.js"></script>
+    <link rel="stylesheet" href="AidenEyrePortfolio/styles.css" />
   </head>
 
   <body>
@@ -20,18 +20,18 @@
       <div>
         <div class="headButtons">
           <a href="https://github.com/AidenEyre" target="blank"
-            ><img src="images/github.png" alt="Github Logo" />
+            ><img src="AidenEyrePortfolio/images/github.png" alt="Github Logo" />
           </a>
           <a href="" target="blank"
-            ><img src="images/email.png" alt="Email Logo" />
+            ><img src="AidenEyrePortfolio/images/email.png" alt="Email Logo" />
           </a>
           <a href="" target="blank"
-            ><img src="images/linkedin.png" alt="Email Logo" />
+            ><img src="AidenEyrePortfolio/images/linkedin.png" alt="Email Logo" />
           </a>
         </div>
         <img
           class="headImage"
-          src="images/PictureOfMe.jpg"
+          src="AidenEyrePortfolio/images/PictureOfMe.jpg"
           alt="Photo of Aiden Eyre"
           usemap="#headerImageMap"
         />
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div id="resumeSection">
-          <a href="AidenEyre_Resume.pdf" target="new"
+          <a href="AidenEyrePortfolio/AidenEyre_Resume.pdf" target="new"
             ><h2>Open Resume in PDF</h2></a
           >
 
