--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aiden Eyre</title>
-    <script type="text/javascript" src="AidenEyrePortfolio/code.js"></script>
-    <link rel="stylesheet" href="AidenEyrePortfolio/styles.css" />
+    <script type="text/javascript" src="code.js"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -20,18 +20,18 @@
       <div>
         <div class="headButtons">
           <a href="https://github.com/AidenEyre" target="blank"
-            ><img src="AidenEyrePortfolio/images/github.png" alt="Github Logo" />
+            ><img src="images/github.png" alt="Github Logo" />
           </a>
           <a href="" target="blank"
-            ><img src="AidenEyrePortfolio/images/email.png" alt="Email Logo" />
+            ><img src="images/email.png" alt="Email Logo" />
           </a>
           <a href="" target="blank"
-            ><img src="AidenEyrePortfolio/images/linkedin.png" alt="Email Logo" />
+            ><img src="images/linkedin.png" alt="Email Logo" />
           </a>
         </div>
         <img
           class="headImage"
-          src="AidenEyrePortfolio/images/PictureOfMe.jpg"
+          src="images/PictureOfMe.jpg"
           alt="Photo of Aiden Eyre"
           usemap="#headerImageMap"
         />
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div id="resumeSection">
-          <a href="AidenEyrePortfolio/AidenEyre_Resume.pdf" target="new"
+          <a href="AidenEyre_Resume.pdf" target="new"
             ><h2>Open Resume in PDF</h2></a
           >
 
@@ -139,8 +139,8 @@
 
               <tr>
                 <td class="rtBold" colspan="2">
-                  Snake Game Web App - <a href="">GitHub</a> /
-                  <a href="">Website</a>
+                  Snake Game Web App - <a href="https://github.com/AidenEyre/Snake-Game">GitHub</a> /
+                  <a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/">Website</a>
                 </td>
               </tr>
 
@@ -153,8 +153,8 @@
 
               <tr>
                 <td class="rtBold" colspan="2">
-                  Pet Competition Web Form - <a href="">GitHub</a> /
-                  <a href="">Website</a>
+                  Pet Competition Web Form - <a href="https://github.com/AidenEyre/Pet_Competition">GitHub</a> /
+                  <a href="http://icarus.cs.weber.edu/~ae31972/Pet_Competition/">Website</a>
                 </td>
               </tr>
 
@@ -164,14 +164,14 @@
 
               <tr>
                 <td class="rtBold" colspan="2">
-                  Portfolio Website - <a href="">GitHub</a> /
-                  <a href="">Website</a>
+                  Portfolio Website - <a href="https://github.com/AidenEyre/AidenEyre_Portfolio">GitHub</a> /
+                  <a href="index.html">Website</a>
                 </td>
               </tr>
 
               <tr>
                 <td class="rtDoubleTab" colspan="2">
-                  My website to show off my knowledge of computer science.
+                  My website to show off my knowledge of computer science (this current website).
                 </td>
               </tr>
 
