Updated projects page and added styles to it.

--- a/index.html
+++ b/index.html
@@ -74,27 +74,52 @@
           </p>
         </div>
         <div id="projectSection">
-          <div>
-            <h1 id="pSnakeGameLink"><a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/">Snake Game</a></h1>
-            <div id="s1"></div>
-            <div id="s2"></div>
-            <div id="s3"></div>
-            <div id="s4"></div>
-            <div id="s5"></div>
-            <div id="s6"></div>
-            <div id="s7"></div>
-            <div id="s8"></div>
-            <div id="s9"></div>
-            <div id="s10"></div>
-            <div id="s11"></div>
-            <div id="s12"></div>
-            <div id="s13"></div>
-            <div id="s14"></div>
-            <div id="s15"></div>
-            <div id="s16"></div>
-            <p>Basic snake game written in HTML, CSS, and JavaScript. Programmed to run on both mobile
+          <div class="projectBlock">
+            <h1 id="pSnakeGameLink"><a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/" target="blank">Snake Game</a></h1>
+            <div id="s1" class="snakeAnimation"></div>
+            <div id="s2" class="snakeAnimation"></div>
+            <div id="s3" class="snakeAnimation"></div>
+            <div id="s4" class="snakeAnimation"></div>
+            <div id="s5" class="snakeAnimation"></div>
+            <div id="s6" class="snakeAnimation"></div>
+            <div id="s7" class="snakeAnimation"></div>
+            <div id="s8" class="snakeAnimation"></div>
+            <div id="s9" class="snakeAnimation"></div>
+            <div id="s10" class="snakeAnimation"></div>
+            <div id="s11" class="snakeAnimation"></div>
+            <div id="s12" class="snakeAnimation"></div>
+            <div id="s13" class="snakeAnimation"></div>
+            <div id="s14" class="snakeAnimation"></div>
+            <div id="s15" class="snakeAnimation"></div>
+            <div id="s16" class="snakeAnimation"></div>
+            <p>
+              Basic snake game written in HTML, CSS, and JavaScript. Programmed to run on both mobile
                and desktop. JavaScript DOM elements are used to paint the game onto an html canvas. 
                Event handlers are used for the button and key presses.
+            </p>
+          </div>
+
+          <div class="projectBlock">
+            <h1 id="pPetCompLink"><a href="http://icarus.cs.weber.edu/~ae31972/Pet_Competition/" target="blank">Pet Competition</a></h1>
+            <p>
+              HTML form pieced together with CSS and a little bit of javascript. The idea of this project was
+              to show off my knowledge of HTML forms. I thought it would be fun to add a little javascript to create
+              page tranistions with the buttons.
+            </p>
+          </div>
+
+          <div class="projectBlock">
+            <h1 id="pPortfolioLink"><a href="index.html">Portfolio Website</a></h1>
+            <p>
+              Portfolio website, that you're currently in, to display the work I've done in computer science.
+              Made with HTML, CSS, and JavaScript.
+            </p>
+          </div>
+
+          <div class="projectBlock">
+            <h1 id="pAssignmentPageLink"><a href="http://icarus.cs.weber.edu/~ae31972/Assignment_website/" target="blank">Assignment Page</a></h1>
+            <p>
+              Class page to hold each of my web development assignments in, Coded with HTML and CSS.
             </p>
           </div>
         </div>
@@ -139,8 +164,8 @@
 
               <tr>
                 <td class="rtBold" colspan="2">
-                  Snake Game Web App - <a href="https://github.com/AidenEyre/Snake-Game">GitHub</a> /
-                  <a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/">Website</a>
+                  Snake Game Web App - <a href="https://github.com/AidenEyre/Snake-Game" target="blank">GitHub</a> /
+                  <a href="http://icarus.cs.weber.edu/~ae31972/Snake-Game/" target="blank">Website</a>
                 </td>
               </tr>
 
@@ -153,8 +178,8 @@
 
               <tr>
                 <td class="rtBold" colspan="2">
-                  Pet Competition Web Form - <a href="https://github.com/AidenEyre/Pet_Competition">GitHub</a> /
-                  <a href="http://icarus.cs.weber.edu/~ae31972/Pet_Competition/">Website</a>
+                  Pet Competition Web Form - <a href="https://github.com/AidenEyre/Pet_Competition" target="blank">GitHub</a> /
+                  <a href="http://icarus.cs.weber.edu/~ae31972/Pet_Competition/" target="blank">Website</a>
                 </td>
               </tr>
 
@@ -164,7 +189,7 @@
 
               <tr>
                 <td class="rtBold" colspan="2">
-                  Portfolio Website - <a href="https://github.com/AidenEyre/AidenEyre_Portfolio">GitHub</a> /
+                  Portfolio Website - <a href="https://github.com/AidenEyre/AidenEyre_Portfolio" target="blank">GitHub</a> /
                   <a href="index.html">Website</a>
                 </td>
               </tr>
