Changed about me section text and added some styling to it.

--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
       <div class="bodyBlock">
         <div id="aboutMeSection">
           <p>
-            I'm a student at Weber State University working hard to achieve a
-            bachelors degree in Computer Science.
-            <!--Most of my experience thus far
-            is in front end work such as HTML, CSS and Javascript. I also have
-            spent time working with C#, C++, Java, and SQL. I absolutely love
-            learning new things and enjoy every class I get the opportunity to
-            take! -->
+            From getting out into the mountains to sitting in front of my laptop writing code
+            I'm always up for a good challenge. The moment I realized that I was making all my
+            family check out each project I made, I new programming was for me! Currently, I'm studying
+            for a bachelors of computer science degree. I'm always looking to learn new things and become
+            a better programmer.
           </p>
         </div>
         <div id="projectSection">
